OnboardingV2Minimal/force-app/main/default/objects/Twilio_Configuration__mdt/Twilio_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Twilio SMS provider settings</description>
    <label>Twilio Configuration</label>
    <pluralLabel>Twilio Configurations</pluralLabel>
</CustomObject>