OnboardingV2Minimal/force-app/main/default/objects/Twilio_Configuration__mdt/fields/Account_SID__c.field-meta.xml
<CustomField>
    <fullName>Account_SID__c</fullName>
    <description>Twilio Account SID (required for API calls). Can also be stored in Named Credential username.</description>
    <label>Account SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>