OnboardingV2Minimal/force-app/main/default/objects/Twilio_Configuration__mdt/fields/From_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>From_Phone_Number__c</fullName>
    <description>The Twilio phone number to send SMS messages from (e.g., +15551234567)</description>
    <label>From Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>