OnboardingV2Minimal/force-app/main/default/objects/Twilio_Configuration__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Name of the Named Credential for Twilio API (defaults to &apos;Twilio_API&apos; if not specified)</description>
    <label>Named Credential</label>
    <length>80</length>
    <type>Text</type>
</CustomField>